adding content making client req revisions

--- a/src/about.html
+++ b/src/about.html
@@ -111,51 +111,120 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid">
+    <div class="container">
+      <div class="main-title">
+          <h1>ABOUT</h1>
+          <hr>
+      </div>
+      <div class="about-filter">
+        <a href="javascript:void(0)" class="filter active" data-filter="mix">All</a>
+        <a href="javascript:void(0)" class="filter" data-filter="bio">Bio</a>
+        <a href="javascript:void(0)" class="filter" data-filter="performance">Performance</a>
+      </div>
+    </div>
 
-        <div class="row">
-          <div class="main-title">
-              <h1>ABOUT</h1>
-              <hr>
-          </div>
-            <div class="clearfix">
-                <div class="col-md-6 col-sm-6 bg-yellow float-right">
-                    <div class="half-part">
-                        <div class="box-content">
-                            <h4>T. L. Hine (b. 1979) is a published composer, multifaceted performer and certified educator currently residing in West Hartford, CT.</h4>
-                            <hr>
+    <!-- start filterableContent area -->
+      <div id="filterable-content" class="container">
+        <!-- clearfix -->
+        <div class="col-md-12 mix">
+          <div class="col-md-6 col-sm-6 bg-yellow float-right">
+            <div class="half-part">
+              <div class="box-content">
+                <h4>T. L. Hine (b. 1979) is a published composer, multifaceted performer and certified educator currently residing in West Hartford, CT.</h4>
+                <hr>
 
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-sm-6 bg-image" style="background-image: url(img/headshot-2.jpg)" >
-                    <div class="half-part"></div>
-                </div>
-            </div>
-
-
-            </div>
-        </div>
-        <div class="container">
-
-            <div class="about-content margin-top">
-              <div class="row">
-                  <div class="col-md-6">
-                      <div class="content-history">
-                        <h1>Bio</h1>
-                        <hr>
-                      </div>
-                  </div>
-                  <div class="col-md-6">
-                      <div class="content-descriptin">
-                          <p>
-                              <span>T. L. Hine (b. 1979) is a published composer, multifaceted performer and certified educator currently residing in West Hartford, CT.</span> Mr. Hine’s compositions are available for purchase or rental through this website – either directly from his own imprint or via links to other publishers. As a performer, Mr. Hine is active as a conductor, singer, and multi-instrumentalist. In addition to his work as a performing musician and creative artist, Mr. Hine also provides <a href='services.html'>music-related services</a> including private lessons, piano tuning and repair, transcription/arranging, and remote classical recording. Mr. Hine is the Organist and Director of Music at the <a href='http://westhartforduu.org/' target='_blank'>Universalist Church of West Hartford</a> and Music Director of the <a href='http://www.msgh.org/' target='_blank'>Montessori School of Greater Hartford</a>.
-                          </p>
-                      </div>
-                  </div>
               </div>
             </div>
+          </div>
+          <div class="col-md-6 col-sm-6 bg-image" style="background-image: url(img/headshot.jpg)" >
+            <div class="half-part"></div>
+          </div>
         </div>
+        <div class="row mix bio">
+          <div class="col-md-6">
+            <div class="content-history">
+              <h1>Bio</h1>
+              <hr>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="content-description">
+              <p>
+                <span>T. L. Hine (b. 1979) is a published composer, multifaceted performer and certified educator currently residing in West Hartford, CT.</span> Mr. Hine’s compositions are available for purchase or rental through this website – either directly from his own self-published imprint or via links to other publishers. As a performer, Mr. Hine is active as a conductor, singer, and multi-instrumentalist. In addition to his work as a performing musician and creative artist, Mr. Hine also provides music-related <a href="/services.html">services</a> including private lessons, piano tuning and repair, transcription/arranging, and remote classical recording. Mr. Hine is the Organist and Director of Music at the <a href="http://www.westhartforduu.org" target="_blank">Universalist Church of West Hartford</a> and Music Director of the <a href="http://www.msgh.org" target="_blank">Montessori School of Greater Hartford</a>.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row mix performance">
+          <div class="col-md-6">
+              <div class="content-history">
+                <h1>Performance</h1>
+                <hr>
+              </div>
+          </div>
+          <div class="col-md-6 mix performance">
+              <div class="content-description">
+                  <h3 class="content-description-subheader">Central CT Composers Circle</h3>
+                  <p>
+                    <a href="https://www.facebook.com/Central-CT-Composers-Circle-115267385330788/" target="_blank">The Central CT Composers Circle</a> (CCCC) is a new music collective of composers looking to produce high-quality 21st century music concerts in the central CT area.
+                  </p>
+              </div>
+              <div class="content-description">
+                <h3>Lituus Duo</h3>
+                <p>
+                  The Lituus Duo (currently on hiatus) is comprised of saxophonist T. L. Hine and clarinetist and web developer <a href="http://adamjberkowitz.com" target="_blank">Adam Berkowitz</a>. <span>The Lituus Duo performs an eclectic, high-energy mix of originals written for this extra-ordinary pairing alongside freely arranged pieces by composers both familiar and obscure, ancient and living.</span> Music J. S. Bach, John Cage, Lee Hyla, Steve Reich, and others are staples of our repetoire. In 2013, the Lituus Duo was chosen to present a concert of electro-acoustic music for saxophone, clarinet and electronics at the national conference of the <a href="http://www.saxophonealliance.org/conference-regional.asp" target="_blank">North American Saxophone Alliance</a>. Visit the WATCH & LISTEN page for videos of the Lituus Duo in action.
+                </p>
+              </div>
+              <div class="content-description">
+                <h3>T.L. Hine Trio</h3>
+                <p>
+                  The T. L. Hine jazz trio is a flexible ensemble comprised of engaging, professional Hartford-area musicians; we are available to provide the perfect musical accompaniment to your social event (wedding receptions, gallery openings, private parties, etc.). Choose the core group of saxophone, bass and drums or add/substitute piano and/or guitar to expand/change the timbre. <span>We love to play and we’re always happy to add specific song requests to our repertoire.</span> Please feel free to <a href="mailto:tlhine@tlhine.com">contact me</a> for more information or to request a price quote.
+                </p>
+              </div>
+              <div class="content-description">
+                <h3>Universalist Church</h3>
+                <p>
+                  Mr. Hine has been a member of the staff at the <a href="http://westhartforduu.org" target="_blank">Universalist Church</a> since 2008; he administers the large and vibrant music program, accompanies worship services, and directs all of the ensembles (the Universalist Church Choir, Bell Choir, Children’s Choir, Universalist Jazz Ensemble, etc.). Mr. Hine also serves as the Resident Composer for the congregation and frequently composes new works and new arrangements for the church's musical ensembles.
+                </p>
+                <p>
+                  <span>The Universalist Church frequently hosts both local and traveling musicians for concerts held both in our sanctuary and in our social hall.</span> Our sanctuary benefits from outstanding acoustics (both warm and present) well-suited to chamber music and music that is lightly amplified.
+                </p>
+                <p>
+                  The music program strives to support new music in particular and has frequently hosted local champions of new music in the Hartford area like <a href="http://www.ctcomposers.org/" target="_blank">CT Composers, Inc.</a>, the <a href="http://www.hicorchestra.com/" target="_blank">Hartford Independent Chamber Orchestra</a>, and <a href="https://www.facebook.com/Central-CT-Composers-Circle-115267385330788/" target="_blank">Central CT Composers Circle</a>.
+                </p>
+                <p>
+                  Check our <a href="http://westhartforduu.org/calendar.php" target="_blank">calendar</a> and newsletter for updates regarding upcoming concerts!
+                </p>
+                <p>
+                  Here is a sample of past musical events at the Universalist Church.
+                </p>
+                <ul>
+                  <li>SPRING 2016 - Paul Winter's Missa Gaia</li>
+                  <li>SPRING 2015: The music of Estonian composer Arvo Pärt with the Hartford Independent Chamber Orchestra</li>
+                  <li>FALL 2014: Gabriel Faure’s Requiem with the Hartford Independent Chamber Orchestra
+  SPRING 2014: Franz Schubert’s Mass in G with the Hartford Independent Chamber Orchestra
+  </li>
+                  <li>FALL 2013: BRITTEN @ 100: a celebration of the music of Benjamin Britten
+  SPRING 2013: Carol Barnett’s The World Beloved: A Bluegrass Mass with bluegrass band</li>
+                  <li>FALL 2012: Ralph Vaughan Williams’ Fantasia on Christmas Carols with chamber orchestra</li>
+                  <li>SPRING 2012: Selections from Duke Ellington’s Sacred Concerts with the Al Fenton Big Band</li>
+                  <li>FALL 2011: Wolfgang Amadeus Mozart’s Mass in C Minor (KV 427) with chamber orchestra</li>
+                  <li>SPRING 2011: Gospel Music and Spirituals</li>
+                  <li>FALL 2010: Antonio Vivaldi’s Gloria (RV 589)</li>
+                  <li>SPRING 2010: A Celebration of Music from (and inspired by) Africa with guest percussionists</li>
+                  <li>FALL 2009: Star in the East: A Celebration of Advent Music from the Middle Ages through the Present Day</li>
+                  <li>SPRING 2009: Spring Returns: A Celebration of Seasonal Madrigals and Part-Songs from Europe and Beyond</li>
+                  <li>FALL 2008: Benjamin Britten’s A Ceremony of Carols</li>
+                </ul>
+              </div>
+
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
 
 
         <div class="seperate"></div>
@@ -163,14 +232,14 @@
             <div class="container">
                 <div class="footer-wrapper">
                     <div class="footer-content">
-                        <div class="social-media">
-                            <ul>
-                                <li><a href="#">FACEBOOK</a></li>
-                                <li><a href="#">TWITTER</a></li>
-                                <li><a href="#">LINKEDIN</a></li
-                            </ul>
-                        </div>
-
+                      <div class="social-media">
+                          <!-- Get social media -->
+                          <ul>
+                              <li></li>
+                              <li><a href="#">FACEBOOK</a></li>
+                              <li></li>
+                          </ul>
+                      </div>
                     </div>
 
                 </div>
