--- a/src/index.html
+++ b/src/index.html
@@ -136,7 +136,7 @@
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-12 mix web">
                         <div class="img masonry-height">
-                            <img src="img/sheet-music.jpg" alt="Works and Compositions">
+                            <img src="img/works-main.jpg" alt="Works and Compositions">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -151,7 +151,7 @@
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-12 mix art">
                         <div class="img masonry-height">
-                            <img src="img/saxophone.png" alt="Performances">
+                            <img src="img/piano-hands.jpg" alt="Performances">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -166,7 +166,7 @@
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-12 mix logos">
                         <div class="img masonry-height">
-                            <img src="img/piano-hands.jpg" alt="Audio and Video">
+                            <img src="img/saxophone.png" alt="Audio and Video">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -181,7 +181,7 @@
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-12 mix logos">
                         <div class="img masonry-height">
-                            <img src="img/piano-tuning.jpg" alt="Services">
+                            <img src="img/piano-tuning.JPG" alt="Services">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -223,9 +223,9 @@
                     <div class="social-media">
                         <!-- Get social media -->
                         <ul>
+                            <li></li>
                             <li><a href="#">FACEBOOK</a></li>
-                            <li><a href="#">TWITTER</a></li>
-                            <li><a href="#">LINKEDIN</a></li>
+                            <li></li>
                         </ul>
                     </div>
 
