--- a/src/performance.html
+++ b/src/performance.html
@@ -138,11 +138,13 @@
             </div>
         </div> -->
         <div class="content-portfolio">
-            <h1>Performances</h1>
+            <h1>Performance</h1>
             <hr>
             <div class="row">
                 <h3>Universalist Church</h3>
-                <ul></ul>
+                <ul>
+                  
+                </ul>
                 <br><br>
 
             </div>
@@ -185,13 +187,14 @@
         <div class="container">
             <div class="footer-wrapper">
                 <div class="footer-content">
-                    <div class="social-media">
+                  <div class="social-media">
+                      <!-- Get social media -->
                       <ul>
+                          <li></li>
                           <li><a href="#">FACEBOOK</a></li>
-                          <li><a href="#">TWITTER</a></li>
-                          <li><a href="#">LINKEDIN</a></li>
+                          <li></li>
                       </ul>
-                    </div>
+                  </div>
                     <!--
                 </div>
                     <span class="move-top">
