--- a/src/services.html
+++ b/src/services.html
@@ -131,36 +131,47 @@
                 </nav>
                 <div class="content-wrap">
                   <section id="section-flip-1" class="content-current">
-                        <div class="col-md-6 col-sm-6 col-xs-12">
-                            <p>I am a CT certified educator (Music: K – 12) with an extensive history of professional activity and a demonstrated dedication to the training of nascent musicians.  I take a thorough approach to teaching performance technique that stresses parallel development in harmony and music theory – the goal being to create well-rounded musicians with a high degree of musical literacy and independence. Students in my studio are regular participants in CMEA Regional and All-State festivals, and several of my former students have gone on to pursue careers in music.
 
-                            I am an active performer and conductor and a published composer, and I have served on the board of the Hartford Chapter of the CT State Music Teachers Association and as a judge for competitions and festivals held by music teacher organizations throughout the state. I am currently a member of the Hartford Music Teachers Allians.
+                  <div class="col-md-4 col-sm-4 col-xs-12">
+                      <p class="service__text">
+                        I am a CT certified educator (Music: K – 12) with an extensive history of professional activity and a demonstrated dedication to the training of nascent musicians.  I take a thorough approach to teaching performance technique that stresses parallel development in harmony and music theory – the goal being to create well-rounded musicians with a high degree of musical literacy and independence. Students in my studio are regular participants in CMEA Regional and All-State festivals, and several of my former students have gone on to pursue careers in music.
 
-                            I teach private lessons in Glastonbury and West Hartford.  I teach 30-, 45- and 60-minute lessons, and my rates are competitive.  Students in my studio benefit from:</p>
-                         </div>
-                         <div class="col-md-6 col-sm-6 col-xs-12">
-                           <ul>
-                               <li>regular (2 – 3 per year) salon concerts at my home</li>
-                               <li>a professionally recorded year-end recital</li>
-                               <li>the ability to participate in area-wide recitals, festivals, competitons and more through the Hartford Music Teachers Association</li>
-                               <li>the opportunity to perform chamber music in small ensembles with other students</li>
-                               <li>stylistic diversity (classical, jazz, pop & rock, etc.)</li>
-                           </ul>
-                           <p>I am currently accepting students in the study of saxophone, piano & composition. Please use the contact link for more information or to schedule a lesson.</p>
-                         </div>
+                        I am an active performer and conductor and a published composer, and I have served on the board of the Hartford Chapter of the CT State Music Teachers Association and as a judge for competitions and festivals held by music teacher organizations throughout the state. I am currently a member of the Hartford Music Teachers Alliance.
+
+                        I teach private lessons in Glastonbury and West Hartford.  I teach 30-, 45- and 60-minute lessons, and my rates are competitive.  Students in my studio benefit from:
+                    </p>
+
+
+                   </div>
+                   <div class="col-md-4 col-sm-4 col-xs-12">
+                     <ul>
+                         <li>regular (2 – 3 per year) salon concerts at my home</li>
+                         <li>a professionally recorded year-end recital</li>
+                         <li>the ability to participate in area-wide recitals, festivals, competitons and more through the Hartford Music Teachers Association</li>
+                         <li>the opportunity to perform chamber music in small ensembles with other students</li>
+                         <li>stylistic diversity (classical, jazz, pop & rock, etc.)</li>
+                     </ul>
+                     <p>I am currently accepting students in the study of saxophone, piano & composition. Please use the contact link for more information or to schedule a lesson.</p>
+                   </div>
+                   <div class="col-md-4 col-sm-4 col-xs-12">
+                     <img src="img/private-lessons.jpg" alt="private lessons" class="img-responsive">
+                   </div>
                   </section>
                   <section id="section-flip-2">
-                      <div class="col-md-6 col-sm-6 col-xs-12">
+                      <div class="col-md-4 col-sm-4 col-xs-12">
                         <p>
                           I am thoroughly trained in all aspects of notated music, and I am proficient in industry standard musical notation software. Please visit the “WORKS” section of my website for examples and use the contact link for more information or to request a price quote. I am happy to provide the names and contact information of former clients for referral purposes.
                         </p>
                        </div>
-                       <div class="col-md-6 col-sm-6 col-xs-12">
+                       <div class="col-md-4 col-sm-4 col-xs-12">
                             <ul>
                               <li>I am able to produce high quality scores with individualized graphical content</li>
                               <li>I can transcribe from handwritten/shorthand or from an audio recording</li>
                               <li>I will arrange preexisting music for alternate instrumentation (orchestra, brass quintet, etc.), adapting and expanding the content as needed</li>
                             </ul>
+                       </div>
+                       <div class="col-md-4 col-sm-4 col-xs-12">
+                         <img src="img/works-tall.jpg" alt="works" class="img-responsive">
                        </div>
                   </section>
                   <section id="section-flip-3">
@@ -242,13 +253,14 @@
             <div class="container">
                 <div class="footer-wrapper">
                     <div class="footer-content">
-                        <div class="social-media">
+                      <div class="social-media">
+                          <!-- Get social media -->
                           <ul>
+                              <li></li>
                               <li><a href="#">FACEBOOK</a></li>
-                              <li><a href="#">TWITTER</a></li>
-                              <li><a href="#">LINKEDIN</a></li>
+                              <li></li>
                           </ul>
-                        </div>
+                      </div>
 
                     </div>
 
