--- a/src/works.html
+++ b/src/works.html
@@ -143,7 +143,7 @@
                     <!-- Instrumental works -->
                     <div class="col-md-3 col-sm-3 col-xs-12 mix instrumental">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_5.jpg" alt="Portfolio Item">
+                            <img src="img/instrumental.jpeg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -159,7 +159,7 @@
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-12 mix instrumental">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_8.jpg" alt="Portfolio Item">
+                            <img src="img/instrumental.jpeg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -175,7 +175,7 @@
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-12 mix instrumental">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_11.jpg" alt="Portfolio Item">
+                            <img src="img/instrumental.jpeg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -191,7 +191,7 @@
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-12 mix instrumental">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_9.jpg" alt="Portfolio Item">
+                            <img src="img/instrumental.jpeg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -207,7 +207,7 @@
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-12 mix instrumental">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_10.jpg" alt="Portfolio Item">
+                            <img src="img/instrumental.jpeg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -223,7 +223,7 @@
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-12 mix instrumental">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/instrumental.jpeg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -239,7 +239,7 @@
                      </div>
                      <div class="col-md-3 col-sm-3 col-xs-12 mix instrumental">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/instrumental.jpeg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -255,7 +255,7 @@
                      </div>
                      <div class="col-md-3 col-sm-3 col-xs-12 mix instrumental">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/instrumental.jpeg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -271,7 +271,7 @@
                      </div>
                      <div class="col-md-3 col-sm-3 col-xs-12 mix instrumental">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/instrumental.jpeg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -287,7 +287,7 @@
                      </div>
                      <div class="col-md-3 col-sm-3 col-xs-12 mix instrumental">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/instrumental.jpeg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -303,7 +303,7 @@
                      </div>
                      <div class="col-md-3 col-sm-3 col-xs-12 mix instrumental">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/instrumental.jpeg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -320,7 +320,7 @@
                      <!-- Choral works -->
                      <div class="col-md-3 col-sm-3 col-xs-12 mix choral">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/choir.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -336,7 +336,7 @@
                      </div>
                      <div class="col-md-3 col-sm-3 col-xs-12 mix choral">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/choir.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -352,7 +352,7 @@
                      </div>
                      <div class="col-md-3 col-sm-3 col-xs-12 mix choral">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/choir.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -368,7 +368,7 @@
                      </div>
                      <div class="col-md-3 col-sm-3 col-xs-12 mix choral">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/choir.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -384,7 +384,7 @@
                      </div>
                      <div class="col-md-3 col-sm-3 col-xs-12 mix choral">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/choir.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -400,7 +400,7 @@
                      </div>
                      <div class="col-md-3 col-sm-3 col-xs-12 mix choral">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/choir.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -416,7 +416,7 @@
                      </div>
                      <div class="col-md-3 col-sm-3 col-xs-12 mix choral">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/choir.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -432,7 +432,7 @@
                      </div>
                      <div class="col-md-3 col-sm-3 col-xs-12 mix choral">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/choir.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -448,7 +448,7 @@
                      </div>
                      <div class="col-md-3 col-sm-3 col-xs-12 mix choral">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/choir.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -464,7 +464,7 @@
                      </div>
                      <div class="col-md-3 col-sm-3 col-xs-12 mix choral">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/choir.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -480,7 +480,7 @@
                      </div>
                      <div class="col-md-3 col-sm-3 col-xs-12 mix choral">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/choir.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -496,7 +496,7 @@
                      </div>
                      <div class="col-md-3 col-sm-3 col-xs-12 mix choral">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/choir.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -512,7 +512,7 @@
                      </div>
                      <div class="col-md-3 col-sm-3 col-xs-12 mix choral">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/choir.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -528,7 +528,7 @@
                      </div>
                      <div class="col-md-3 col-sm-3 col-xs-12 mix choral">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/choir.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -544,7 +544,7 @@
                      </div>
                      <div class="col-md-3 col-sm-3 col-xs-12 mix choral">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/choir.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -562,7 +562,7 @@
                      <!-- Handbells -->
                      <div class="col-md-3 col-sm-3 col-xs-12 mix choir handbells">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/handbells.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -578,7 +578,7 @@
                      </div>
                      <div class="col-md-3 col-sm-3 col-xs-12 mix handbells">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/handbells.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -594,7 +594,7 @@
                      </div>
                      <div class="col-md-3 col-sm-3 col-xs-12 mix handbells">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/handbells.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -610,7 +610,7 @@
                      </div>
                      <div class="col-md-3 col-sm-3 col-xs-12 mix handbells">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/handbells.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -626,7 +626,7 @@
                      </div>
                      <div class="col-md-3 col-sm-3 col-xs-12 mix handbells">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/handbells.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -642,7 +642,7 @@
                      </div>
                      <div class="col-md-3 col-sm-3 col-xs-12 mix handbells">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/handbells.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -658,7 +658,7 @@
                      </div>
                      <div class="col-md-3 col-sm-3 col-xs-12 mix handbells">
                         <div class="img masonry-height">
-                            <img src="img/portfolio/image_12.jpg" alt="Portfolio Item">
+                            <img src="img/handbells.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -698,14 +698,14 @@
         <div class="container">
             <div class="footer-wrapper">
                 <div class="footer-content">
-                    <div class="social-media">
-                        <!-- Get social media -->
-                        <ul>
-                            <li><a href="#">FACEBOOK</a></li>
-                            <li><a href="#">TWITTER</a></li>
-                            <li><a href="#">LINKEDIN</a></li>
-                        </ul>
-                    </div>
+                  <div class="social-media">
+                      <!-- Get social media -->
+                      <ul>
+                          <li></li>
+                          <li><a href="#">FACEBOOK</a></li>
+                          <li></li>
+                      </ul>
+                  </div>
 
                 </div>
                 <!-- <span class="move-top">
