--- a/src/handbell-works.html
+++ b/src/handbell-works.html
@@ -169,13 +169,14 @@
         <div class="container">
             <div class="footer-wrapper">
                 <div class="footer-content">
-                    <div class="social-media">
-                        <ul>
-                            <li><a href="#">FACEBOOK</a></li>
-                            <li><a href="#">TWITTER</a></li>
-                            <li><a href="#">LINKEDIN</a></li>
-                        </ul>
-                    </div>
+                  <div class="social-media">
+                      <!-- Get social media -->
+                      <ul>
+                          <li></li>
+                          <li><a href="#">FACEBOOK</a></li>
+                          <li></li>
+                      </ul>
+                  </div>
             </div>
         </div>
     </footer>
