--- a/src/instrumental-works.html
+++ b/src/instrumental-works.html
@@ -192,13 +192,14 @@
         <div class="container">
             <div class="footer-wrapper">
                 <div class="footer-content">
-                    <div class="social-media">
+                  <div class="social-media">
+                      <!-- Get social media -->
                       <ul>
+                          <li></li>
                           <li><a href="#">FACEBOOK</a></li>
-                          <li><a href="#">TWITTER</a></li>
-                          <li><a href="#">LINKEDIN</a></li>
+                          <li></li>
                       </ul>
-                    </div>
+                  </div>
 
             </div>
         </div>
